--- a/controller/app/src/main/res/layout/activity_main.xml
+++ b/controller/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.controller.MainActivity">
+    tools:context="com.controller.MainActivity"
+    >
 
 
     <include layout="@layout/content_main" />
