--- a/controller/app/src/main/res/layout/content_main.xml
+++ b/controller/app/src/main/res/layout/content_main.xml
@@ -12,4 +12,9 @@
     tools:context="com.controller.MainActivity"
     tools:showIn="@layout/activity_main">
 
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/fragment_container">
+    </FrameLayout>
 </RelativeLayout>
