--- a/controller/app/src/main/res/layout/big_car_fragment.xml
+++ b/controller/app/src/main/res/layout/big_car_fragment.xml
@@ -5,7 +5,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:clipChildren="false"
     android:clipToPadding="false"
-    android:background="#FFFFFF">
+    android:background="@android:color/transparent">
     <LinearLayout
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
@@ -24,7 +24,7 @@
         android:id="@+id/horizontal_joystick"
         android:clipChildren="false"
         android:clipToPadding="false"
-        android:background="@drawable/joystick"
+        android:background="@drawable/joystick2"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:layout_marginRight="20dp"
@@ -55,12 +55,12 @@
         android:layout_alignTop="@+id/linearLayout1"
         android:layout_alignStart="@+id/linearLayout1"/>
 
-    <TextView
+    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="BIG CAR"
-        android:id="@+id/textView3"
-        android:layout_below="@+id/linearLayout1"
-        android:layout_centerHorizontal="true"/>
+        android:id="@+id/imageView"
+        android:layout_centerHorizontal="true"
+        android:background="@drawable/bigcarfont2"
+        android:layout_above="@+id/horizontal_joystick"/>
+
 </RelativeLayout>
