--- a/controller/app/src/main/res/layout/cam_car_fragment.xml
+++ b/controller/app/src/main/res/layout/cam_car_fragment.xml
@@ -5,7 +5,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:clipChildren="false"
     android:clipToPadding="false"
-    android:background="#FFFFFF">
+    android:background="@android:color/transparent">
     <LinearLayout
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
@@ -55,12 +55,13 @@
         android:layout_alignTop="@+id/linearLayout1"
         android:layout_alignStart="@+id/linearLayout1"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="CAMCAR"
-        android:id="@+id/textView3"
-        android:layout_below="@+id/linearLayout1"
-        android:layout_centerHorizontal="true"/>
+    <ImageView
+        android:layout_width="200dp"
+        android:layout_height="130dp"
+        android:id="@+id/imageView2"
+        android:background="@drawable/camcarfont1"
+        android:layout_alignBottom="@+id/horizontal_joystick"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="181dp"/>
+
 </RelativeLayout>
