--- a/controller/app/src/main/res/layout/content_main.xml
+++ b/controller/app/src/main/res/layout/content_main.xml
@@ -4,17 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.controller.MainActivity"
     tools:showIn="@layout/activity_main">
 
     <FrameLayout
+
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/fragment_container">
+        android:id="@+id/fragment_container"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true">
     </FrameLayout>
 </RelativeLayout>
