Attempting to use VideoView instead. Can play video, but app crashes when attempting to use other ui elements.
Signed-off-by: Joakim Schmidt <joakim.schmidt@gmail.com>

--- a/controller/app/src/main/res/layout/activity_main.xml
+++ b/controller/app/src/main/res/layout/activity_main.xml
@@ -5,8 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="false"
-    tools:context="com.controller.MainActivity"
-                                                 android:background="@drawable/backround7">
+    tools:context="com.controller.MainActivity">
+    <!--android:background="@drawable/backround7"-->
 
 
     <include layout="@layout/content_main" />
