--- a/controller/app/src/main/res/layout/big_car_fragment.xml
+++ b/controller/app/src/main/res/layout/big_car_fragment.xml
@@ -7,18 +7,12 @@
     android:clipToPadding="false"
     android:background="@android:color/transparent"
     android:id="@+id/big_bground">
-    <LinearLayout
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:orientation="vertical"
-        android:layout_margin="10dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:clipChildren="false"
-        android:clipToPadding="false"
-        android:id="@+id/linearLayout1">
 
-    </LinearLayout>
+    <VideoView
+        android:layout_height="fill_parent"
+        android:layout_width="fill_parent"
+        android:id="@+id/big_video" />
+
     <RelativeLayout
         android:layout_height="200dp"
         android:layout_width="200dp"
@@ -52,9 +46,7 @@
         android:text="@string/Car_view_Menu_Button"
         android:clickable="true"
         android:onClick="openMenu"
-        android:background="#ed1414"
-        android:layout_alignTop="@+id/linearLayout1"
-        android:layout_alignStart="@+id/linearLayout1"/>
+        android:background="#ed1414" />
 
     <ImageView
         android:layout_width="wrap_content"
