--- a/controller/app/src/main/res/layout/big_car_fragment.xml
+++ b/controller/app/src/main/res/layout/big_car_fragment.xml
@@ -11,7 +11,8 @@
     <VideoView
         android:layout_height="fill_parent"
         android:layout_width="fill_parent"
-        android:id="@+id/big_video" />
+        android:id="@+id/big_video"
+        android:layout_alignParentBottom="true" />
 
     <RelativeLayout
         android:layout_height="200dp"
