--- a/controller/app/src/main/res/layout/cam_car_fragment.xml
+++ b/controller/app/src/main/res/layout/cam_car_fragment.xml
@@ -8,6 +8,12 @@
     android:background="@android:color/transparent"
     android:id="@+id/cam_bground">
 
+    <VideoView
+        android:layout_height="fill_parent"
+        android:layout_width="fill_parent"
+        android:id="@+id/cam_video"
+        android:layout_alignParentBottom="true" />
+
     <RelativeLayout
         android:layout_height="200dp"
         android:layout_width="200dp"
@@ -44,6 +50,18 @@
         android:background="#ed1414"
         android:layout_marginTop="5dp"
         android:layout_marginLeft="5dp" />
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Start"
+        android:id="@+id/button"
+        android:layout_alignTop="@+id/menu_button"
+        android:layout_alignParentEnd="true"
+        android:clickable="true"
+        android:onClick="toggleSpecial"
+        android:layout_marginRight="5dp"
+        android:background="#e50bfe"/>
 
     <ImageView
         android:layout_width="200dp"
